fix: make notifications popover menu content more visible

--- a/src/themes/autumn/_common.scss
+++ b/src/themes/autumn/_common.scss
@@ -102,7 +102,7 @@ p.md p:last-child {
 }
 
 .gray {
-	color: $gray-color !important;
+	color: $gray-color-dark !important;
 }
 
 .b--light-gray {
